--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "opencollective-postinstall": "^2.0.2",
     "print-message": "^2.1.0",
     "prop-types": "^15.5.10",
-    "react-native-drawer": "2.5.1",
+    "react-native-drawer": "github:SmartCover-Systems/react-native-drawer",
     "react-native-easy-grid": "0.2.2",
     "react-native-vector-icons": "^7.0.0",
     "react-tween-state": "^0.1.5",
